--- a/header.html
+++ b/header.html
@@ -136,7 +136,8 @@
             <div>
                 <a href="javascript:void(0);" data-url="support" class="js_location_url" >资源</a>
                 <ul class="sub-menu">
-                    <li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>
+                    <!--<li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>-->
+                    <li><a href="javascript:void(0);" data-url="su_platform" class="js_location_url" >云授权</a></li>
                     <li>
                         <a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案<i class="icon-angle-right"></i></a>
                         <ul class="sub-child-menu">
@@ -147,12 +148,12 @@
                             <li><a href="javascript:void(0);" data-url="common_industry" class="js_location_url" >通用行业</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a>
-
-                    </li>
-                    <li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>
-                    <li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>
+                    <!--<li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>-->
+                    <!--<li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>-->
+                    <!--<li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>-->
+                    <li><a href="javascript:void(0);" data-url="download_5" class="js_location_url" >精锐5</a></li>
+                    <li><a href="javascript:void(0);" data-url="download_4s" class="js_location_url" >精锐4</a></li>
+                    <li><a href="javascript:void(0);" data-url="download_1" class="js_location_url" >灵锐1</a></li>
                 </ul>
             </div>
             <div>
