--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="wrap clear-fix ">
             <p class="sn-phcm-title">深思云授权助力软件企业互联网化</p>
             <ul class="sn-phcm-list">
-                <li>
+                <li class="active">
                     <a href="#sn_phc_menu_1">
-                        <img src="images/home/icon_1.png">
+                        <img src="images/home/icon_1_active.png">
                         <p>授权管理</p>
                     </a>
                 </li>
