--- a/footer.html
+++ b/footer.html
@@ -92,4 +92,4 @@
     <a id="sn_go_top" class="up" href="javascript:void(0); "></a>
 </aside>
 
-<script src="scripts/main.js"></script>
+<script src="scripts/main.js?v=1.0"></script>
