--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="header"></div>
     <!--轮播图-->
-    <div class="swiper-container ">
+    <div class="swiper-container swiper-slide-container ">
         <div class="swiper-wrapper">
             <div class="swiper-slide ">
                 <div class="sn-swiper-item">
@@ -183,23 +183,64 @@
     <section class="sn-partners">
         <div class="wrap clear-fix">
             <p class="sm-p-title">我们的合作伙伴</p>
-            <ul class="sm-p-list">
-                <li><a href="javascript:void(0);"><img src="images/partners/p_1.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_2.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_3.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_4.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_5.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_6.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_7.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_8.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_9.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_10.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_11.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_12.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_13.png"></a></li>
-            </ul>
+            <!--<ul class="sm-p-list">-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_1.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_2.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_3.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_4.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_5.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_6.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_7.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_8.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_9.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_10.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_11.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_12.png"></a></li>-->
+                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_13.png"></a></li>-->
+            <!--</ul>-->
+            <div class="swiper-container sn-partners-slide">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide ">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.kingdee.gs.cn"><img src="images/partners/1.png"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide  ">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.yonyou.com"><img src="images/partners/2.png"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide  ">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.siemens.com/entry/cn/zh/"><img src="images/partners/3.png"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.sony.com.cn"><img src="images/partners/4.png"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.chanjet.com"><img src="images/partners/5.png"></a>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="sn-swiper-item-2">
+                            <a href="http://www.founder.com.cn/zh-cn/"><img src="images/partners/6.png"></a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev swiper-button-black"></div>
+                <div class="swiper-button-next swiper-button-black"></div>
+            </div>
+
         </div>
     </section>
+
+
 
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
