--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>即时授权，提升用户体验，软件保护“零成本”。</p>
+                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/2.jpg">
                 </div>
@@ -36,6 +37,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>精准掌握所有软件授权的使用情况。</p>
+                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/3.jpg">
                 </div>
@@ -45,6 +47,7 @@
                     <div class="sn-si-title">
                         <p>深思安全授权平台</p>
                         <p>顶级安全技术，全自动加密引擎，远离盗版。</p>
+                        <a href="javascript:void(0);" class="reg-btn js_location_url" data-url="register">免费注册</a>
                     </div>
                     <img src="images/slides/4.jpg">
                 </div>
@@ -183,51 +186,36 @@
     <section class="sn-partners">
         <div class="wrap clear-fix">
             <p class="sm-p-title">我们的合作伙伴</p>
-            <!--<ul class="sm-p-list">-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_1.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_2.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_3.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_4.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_5.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_6.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_7.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_8.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_9.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_10.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_11.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_12.png"></a></li>-->
-                <!--<li><a href="javascript:void(0);"><img src="images/partners/p_13.png"></a></li>-->
-            <!--</ul>-->
             <div class="swiper-container sn-partners-slide">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide ">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.kingdee.gs.cn"><img src="images/partners/1.png"></a>
+                            <a href="http://www.kingdee.gs.cn" target="_blank"><img src="images/partners/1.png"></a>
                         </div>
                     </div>
                     <div class="swiper-slide  ">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.yonyou.com"><img src="images/partners/2.png"></a>
+                            <a href="http://www.yonyou.com" target="_blank"><img src="images/partners/2.png"></a>
                         </div>
                     </div>
                     <div class="swiper-slide  ">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.siemens.com/entry/cn/zh/"><img src="images/partners/3.png"></a>
+                            <a href="http://www.siemens.com/entry/cn/zh/" target="_blank"><img src="images/partners/3.png"></a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.sony.com.cn"><img src="images/partners/4.png"></a>
+                            <a href="http://www.sony.com.cn" target="_blank"><img src="images/partners/4.png"></a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.chanjet.com"><img src="images/partners/5.png"></a>
+                            <a href="http://www.chanjet.com" target="_blank"><img src="images/partners/5.png"></a>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="sn-swiper-item-2">
-                            <a href="http://www.founder.com.cn/zh-cn/"><img src="images/partners/6.png"></a>
+                            <a href="http://www.founder.com.cn/zh-cn/" target="_blank"><img src="images/partners/6.png"></a>
                         </div>
                     </div>
 
