--- a/platform_intro.html
+++ b/platform_intro.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_1.jpg">
+                <img class="snphc-img" src="images/platform/plat_1.png">
             </div>
         </div>
     </section>
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_2.jpg">
+                <img class="snphc-img" src="images/platform/plat_2.png">
             </div>
         </div>
     </section>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_3.jpg">
+                <img class="snphc-img" src="images/platform/plat_3.png">
             </div>
         </div>
     </section>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_4.jpg">
+                <img class="snphc-img" src="images/platform/plat_4.png">
             </div>
         </div>
     </section>
