--- a/header.html
+++ b/header.html
@@ -20,8 +20,8 @@
                 <div class="sub-menu-group  ">
                     <!--<p class="sub-mg-title">欢迎试用深思数盾数据安全产品!</p>-->
                     <ul class="sub-menu-item ">
-                        <li>
-                            <a href="javascript:void(0);" data-url="platform" class="js_location_url text-center">
+                        <li class="disabled">
+                            <a data-url="platform" class="js_location_url text-center">
                                 云授权平台
                             </a>
                         </li>
@@ -51,8 +51,8 @@
                         <!--</li>-->
                     </ul>
                     <ul class="sub-menu-item">
-                        <li>
-                            <a href="javascript:void(0);" data-url="tools" class="js_location_url text-center" >
+                        <li class="disabled">
+                            <a  data-url="tools" class="js_location_url text-center" >
                                 专业工具
                             </a>
                         </li>
@@ -76,8 +76,8 @@
                         </li>
                     </ul>
                     <ul class="sub-menu-item">
-                        <li>
-                            <a href="javascript:void(0);"  data-url="locks" class="js_location_url text-center" >
+                        <li class="disabled">
+                            <a  data-url="locks" class="js_location_url text-center" >
                                 硬件加密锁
                             </a>
                         </li>
@@ -138,6 +138,7 @@
                 <ul class="sub-menu">
                     <!--<li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>-->
                     <li><a href="javascript:void(0);" data-url="su_platform" class="js_location_url" >云授权</a></li>
+                    <li><a href="javascript:void(0);" data-url="download_5" class="js_location_url" >精锐5</a></li>
                     <li>
                         <a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案<i class="icon-angle-right"></i></a>
                         <ul class="sub-child-menu">
@@ -151,7 +152,6 @@
                     <!--<li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>-->
                     <!--<li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>-->
                     <!--<li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>-->
-                    <li><a href="javascript:void(0);" data-url="download_5" class="js_location_url" >精锐5</a></li>
                     <li><a href="javascript:void(0);" data-url="download_4s" class="js_location_url" >精锐4</a></li>
                     <li><a href="javascript:void(0);" data-url="download_1" class="js_location_url" >灵锐1</a></li>
                 </ul>
