--- a/su_game.html
+++ b/su_game.html
@@ -59,8 +59,7 @@
                     • 独立的 SS 加密中间件，软件只要简单的API调用即可获得驱动级的反破解保护，和硬件的通信信道层层保护，无需开发商任何开发操作
                     • 配合 SS 加密中间件，提供了在硬件内对破解行为进行反制的手段。
                     • 使用 Virbox 加密引擎编译软件的重要部分，由于在编译阶段就介入，所以在安全性和性能的综合指标方面，世界级的虚拟机外壳也是无法比拟的
-                    • 硬件性能大幅提升，可编程能力大大加强，一方面可以将实际的软体关键算法移植到硬件中做到万无一失；另一方面也支持更为复杂的定制方案，
-                    开发商可以方便添加自己的特定加密方案，进一步提高私密性。
+                    • 硬件性能大幅提升，可编程能力大大加强，一方面可以将实际的软体关键算法移植到硬件中做到万无一失；另一方面也支持更为复杂的定制方案，开发商可以方便添加自己的特定加密方案，进一步提高私密性。
                 </p>
             </div>
         </div>
