--- a/we_route.html
+++ b/we_route.html
@@ -27,7 +27,7 @@
         <div class="wrap">
             <p class="sn-wr-title">成长历程</p>
             <div class="sn-wr-list">
-                <i class="icon-time"></i>
+                <i class="icon-self-time"></i>
                 <ul class="sn-wr-item" data-group="2016年">
                     <li>深思软件安全二十载，面向互联网在启航（待确认）</li>
                     <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
