--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
     <section class="sn-partners">
         <div class="wrap clear-fix">
             <p class="sm-p-title">我们的合作伙伴</p>
+            <div class="">
+
+            </div>
             <div class="swiper-container sn-partners-slide">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide ">
@@ -224,6 +227,7 @@
                 <div class="swiper-button-prev swiper-button-black"></div>
                 <div class="swiper-button-next swiper-button-black"></div>
             </div>
+
 
         </div>
     </section>
