--- a/lock_jr5_bt.html
+++ b/lock_jr5_bt.html
@@ -2,6 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
