--- a/cloud_lock.html
+++ b/cloud_lock.html
@@ -44,7 +44,7 @@
                     与精锐5硬件加密锁完全一致的加密服务，永久免费，无需担负加密成本！
                     云锁本质上就是一个云端虚拟的精锐5，在功能上与精锐5完全兼容。开发者深思云锁开发的加密方案，可以无缝迁移到精锐5加密锁中，反之亦然。
                     如果用户选择将授权放在云端使用，那么就必须使用云锁进行加密，并且在使用软件的过程中需要保持客户端在线。
-                    云锁通过硬件加密机来保护用户敏感数据的安全性，安全性显著高于普通解决方案，例如开发者自己开发的云授权锁定机制。
+                    云锁通过硬件加密机来保护用户敏感数据的安全性，安全性显著高于普通解决方案，例如开发自己开发的云授权锁定机制。
                     本质上，深思云盾是云授权平台的一部分，开发者所开发的软件不能直接访问云端，而必须经过本地的SS服务和授权管理服务，因此不需要关注云锁的太多细节。
                     开发者在使用Virbox Protector工具或者通过API方式加密完软件之后，必须指定是用加密锁、云锁亦或二者同时来保护软件。
                 </p>
