--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -73,7 +73,7 @@
                         <p class="sn-ld-title font-size-18">以下版本可供选择</p>
                         <table class="sn-ld-version">
                             <tr>
-                                <th></th><th>旗舰版</th><th>标准版</th><th>基础班</th>
+                                <th></th><th>旗舰版</th><th>标准版</th><th>基础版</th>
                             </tr>
                             <tr>
                                 <td>最大可用存储</td><td>512K</td><td>256K</td><td>128K</td>
@@ -110,7 +110,7 @@
                         <tr><td>最大功率</td><td>100 mw</td><td></td></tr>
                         <tr><td>工作温度范围</td><td>-15 ~ 80 ℃</td><td></td></tr>
                         <tr><td>工作电压</td><td>4.5 ~ 5.5V</td><td></td></tr>
-                        <tr><td>带高压保护</td><td>最高可耐受20V输入电压</td><td></td></tr>
+                        <tr><td>高压保护</td><td>最高可耐受20V输入电压</td><td></td></tr>
                         <tr><td>驱动程序</td><td>有驱/无驱自适应</td><td></td></tr>
                         <tr><td>最大授权数</td><td>6000</td><td>不同型号</td></tr>
                     </table>
@@ -165,7 +165,7 @@
                         <li>
                             <p class="sn-ld-title">标准版/U盘版/网络版产品所有资源</p>
                             <p class="sn-ld-desc">
-                                SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
+                                SS客户端安装包（sense_shield_installer_pub.exe）是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
                                 <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">SDK下载</button>
