--- a/lock_jr5_usb.html
+++ b/lock_jr5_usb.html
@@ -69,7 +69,7 @@
                             精锐5不是-款独立存在的硬件加密锁，而是深思云授权平台的一部分。通过与专业级的系统安全服务SS相配台，精锐5达到了前所未有的安全能力和应用灵活性。
                             <br>
                             <br>
-                            精锐5与深思云锁茌软件保护功能万面100%兼容， 软件可以自由选择用精锐5还是深思云锁保护授杈，并可以实现在运行时的无缝切换。 授权也可以在精锐5和云锁之间转移，以满足用户的不同使用偏好。
+                            精锐5与深思云锁是软件保护功能方面100%兼容， 软件可以自由选择用精锐5还是深思云锁保护授杈，并可以实现在运行时的无缝切换。 授权也可以在精锐5和云锁之间转移，以满足用户的不同使用偏好。
                             <br>
                             <br>
                             开发者可以使用ARM-C语言编写锁内程序，以实现个性化的功能和软件保护方式。对于大多数用户来说，与精锐5配套的Virbox Protector是更具效率的选择，可以在数分钟内完成对软件的高强度保护，不需要改写任何一行代码。
