--- a/lock_lr1_std.html
+++ b/lock_lr1_std.html
@@ -105,7 +105,7 @@
                     <p class="sn-ld-section-title">平台支持：</p>
                     <table class="sn-ld-params">
                         <tr><td width="300">开发语言</td><td colspan="2">VC++、C++ Builder、BC、C#、Java、Delphi、VB、PB、AutoCAD......</td></tr>
-                        <tr><td>操作系统</td><td>0.5小时/年</td><td>WIN8/7/Vista/2012/ 10/XP  MacOS（32）/MacOS（64）</td></tr>
+                        <tr><td>操作系统</td><td></td><td>WIN8/7/Vista/2012/ 10/XP  MacOS（32）/MacOS（64）</td></tr>
                     </table>
                 </div>
                 <div id="tab_4" class="sn-tab-pane ">
