--- a/news_detail.html
+++ b/news_detail.html
@@ -19,7 +19,7 @@
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
             <span>我们</span> <span>></span>
-            <span class="active">公司新闻</span>
+            <span ><a href="javascript:void(0);" class="js_location_url" data-url="we_news">公司新闻</a></span>
         </div>
     </section>
 
