--- a/vp_tools.html
+++ b/vp_tools.html
@@ -57,7 +57,7 @@
                 <div class="sn-phcd-center">
                     <div class="snphc-title-2 color-black-3 ">试用版</div>
                     <div class="snphc-abstract color-black-3">
-                        任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。
+                        任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，安全性与正式版一致。。
                         <br>
                         在任何时候都不能将Virbox Protector试用版加密后的软件正式发布，因为任何其他开发者都可以为试用版加密后的软件发布授权。Virbox Protector的试用版本仅用于测试目的，如果需要正式使用，就必须获得正式的开发者ID和正式版本的Virbox Protector。
                     </div>
