--- a/we_intellectual.html
+++ b/we_intellectual.html
@@ -33,7 +33,7 @@
     <section class="sn-we-ipr">
         <div class="wrap clear-fix">
             <div class="sn-sub-title margin-t-20 text-left">
-                北京深思数盾是北京市知识产权保护协会会员。掌握信息安全保护领域自有核心技术 , 专业提供软件版权保护产品及信息安全服务 , 具备软硬件自主研发、生产、销售于一体的高新技术企业。 自成立以来已经申请了200多顶专利 , 真中近l00顶巳经获得了国家授权 ,  多次获得北京市专利试点企业 , 和专利促进资金支持。
+                北京深思数盾是北京市知识产权保护协会会员。掌握信息安全保护领域自有核心技术 , 专业提供软件版权保护产品及信息安全服务 , 具备软硬件自主研发、生产、销售于一体的高新技术企业。 自成立以来已经申请了200多顶专利 , 其中近100项巳经获得了国家授权 ,  多次获得北京市专利试点企业 , 和专利促进资金支持。
             </div>
             <ul class="swi-list">
                 <li>
