--- a/we_route.html
+++ b/we_route.html
@@ -30,7 +30,7 @@
             <div class="sn-wr-list">
                 <i class="icon-self-time"></i>
                 <ul class="sn-wr-item" data-group="2016年">
-                    <li>深思软件安全二十载，面向互联网在启航（待确认）</li>
+                    <li>深思软件安全二十载，面向互联网在启航</li>
                     <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
                 </ul>
                 <ul class="sn-wr-item" data-group="2015年">
